# kvm-helloworld-amd-snp-intel-tdx

./: README.md  compile.sh
hypervisor/: Makefile  bswap.h  cpuid.c  cpuid.h  definition.h  e820_memory_layout.c  e820_memory_layout.h  hypercall.c  hypervisor.c  kvm.h  pc_sysfw_ovmf.c  pc_sysfw_ovmf.h  sev_snp.h  tdvf-hob.c  tdvf-hob.h  tdvf.c  tdvf.h  tdx.h  uefi.h  uuid.c  uuid.h
kernel/: Makefile  assembly  entry.s  kernel_main.c  linker.script  template.mk
kernel/hypercalls/: hp_lseek.c  hp_open.c  hp_read.c  hp_write.c  hypercall.c
kernel/mm/: e820_memory_layout.h  gdt.c  gdt.h  idt.c  idt.h  init_pt.c  init_pt.h  kframe.c  kframe.h  mmap.c  mmap.h  page_table_config  smalloc.c  smalloc.h  td-hob.c  td-hob.h  translate.c  translate.h  uaccess.c  uaccess.h
kernel/syscalls/: sys_execve.c  sys_mmap.c  sys_open.c  sys_read.c  sys_write.c  syscall_entry.s  syscall_handler.c
kernel/utils/: definition.h  panic.c  panic.h  sev_snp.c  sev_snp.h  string.c  string.h  tdcall.asm  tdvmcall.asm  tdx.c  tdx.h  uefi.h
shim-kvm/: Cargo.toml  layout.ld
shim-kvm/src/: allocator.rs  lib.rs  pagetables.rs  start.rs
user/: gen.py  orw.elf
