[package]
name = "enarx-shim-kvm"
version = "0.7.1"
edition = "2021"
description = "Enarx KVM shim"
authors = ["The Enarx Project Developers"]
repository = "https://github.com/enarx/sallyport"
license = "Apache-2.0"

[features]
gdb = ["dep:gdbstub", "dep:gdbstub_arch", "dbg"]
dbg = []
bench = []

[dependencies]
aes-gcm = { workspace = true }
array-const-fn-init = { workspace = true }
bitflags = { workspace = true }
cfg-if = { workspace = true }
const-default = { workspace = true, features = ["derive"] }
crt0stack = { workspace = true }
goblin = { workspace = true }
linked_list_allocator = { workspace = true }
lset = { workspace = true }
nbytes = { workspace = true }
noted = { workspace = true }
paste = { workspace = true }
primordial = { workspace = true }
rcrt1 = { workspace = true }
sallyport = { workspace = true }
shared = { workspace = true }
spin = { workspace = true }
x86_64 = { workspace = true, features = ["inline_asm", "instructions"] }
xsave = { workspace = true }

# optional dependencies
gdbstub = { workspace = true, optional = true }
gdbstub_arch = { workspace = true, optional = true }

[dev-dependencies]
testaso = { workspace = true }


[workspace.dependencies]
aes-gcm = { version = "0.10.1", features = ["aes"], default-features = false }
anyhow = { version = "1.0.66", default-features = false }
array-const-fn-init = { version = "0.1.0", default-features = false }
async-h1 = { version = "2.3.3", default-features = false }
async-std = { version = "1.11.0", default-features = false, features = ["attributes"] }
atty = { version = "0.2.14", default-features = false }
bitflags = { version = "1.2.0", default-features = false }
camino = { version = "1.0.9", default-features = false }
cfg-if = { version = "1.0.0", default-features = false }
chrono = { version = "0.4.19", features = ["clock", "serde", "std"], default-features = false }
clap = { version = "4.0", features = ["std", "derive", "env", "error-context", "help", "usage", "wrap_help"], default-features = false }
colorful = { version = "0.2.0", default-features = false }
const-default = { version = "1.0.0", default-features = false }
const-oid = { version = "0.9.0", default-features = false }
crt0stack = { version = "0.1.0", default-features = false }
der = { version = "0.6.1", features = ["std"], default-features = false }
dirs = { version = "4.0.0", default-features = false }
drawbridge-client = { version = "0.2.2", default-features = false }
drawbridge-server = { version = "0.2.2", default-features = false }
enarx-exec-wasmtime = { version = "0.7.1", path = "crates/exec-wasmtime", default-features = false }
enarx-config = { version = "0.7.1", path = "crates/enarx-config", default-features = false }
futures = { version = "0.3.21", default-features = false }
getrandom = { version = "0.2.6", features = ["rdrand"], default-features = false }
gdbstub = { version = "0.5.0", default-features = false }
gdbstub_arch = { version = "0.1.1", default-features = false }
goblin = { version = "0.6.0", features = ["elf64"], default-features = false }
hex = { version = "0.4.3", features = ["std"], default-features = false }
http-types = { version = "2.12.0", default-features = false }
io-extras = { version = "=0.17.0", default-features = false }
iocuddle = { version = "0.1.1", default-features = false }
keyring = { version = "1.1.2", default-features = false }
kvm-bindings = { version = "0.6.0", default-features = false }
kvm-ioctls = { version = "0.12.0", default-features = false }
libc = { version = "0.2.141", default-features = false }
linked_list_allocator = { version = "0.10.1", default-features = false }
lset = { version = "0.3.0", default-features = false }
mmarinus = { version = "0.4.0", default-features = false }
mmledger = { version = "0.4.0", default-features = false }
nbytes = { version = "0.1.0", default-features = false }
noted = { version = "1.0.0", default-features = false }
numtoa = { version = "0.2.4", default-features = false }
oauth2 = { version = "4.2.2", default-features = false, features = ["ureq"] }
once_cell = { version = "1.13.0", default-features = false }
openidconnect = { version = "2.3.1", default-features = false }
p384 = { version = "0.11.1", features = ["std", "pem", "ecdsa"], default-features = false }
paste = { version = "1.0.0", default-features = false }
percent-encoding = { version = "2.2.0", default-features = false }
pkcs8 = { version = "0.9.0" }
primordial = { version = "0.5.0", default-features = false }
process_control = { version = "4.0.1", default-features = false }
protobuf = { version = "2.22.0", default-features = false }
protobuf-codegen-pure = { version = "2.27.0", default-features = false }
rand = { version = "0.8.0", features = ["std", "std_rng"], default-features = false }
rcrt1 = { version = "2.5.0", default-features = false }
ring = { version = "0.16.20", features = ["std"], default-features = false }
rsa = { version = "0.7.2", default-features = false }
rustls = { version = "0.20.6", default-features = false }
rustls-pemfile = { version = "1.0.0", default-features = false }
sallyport = { version = "0.7.1", path = "crates/sallyport", default-features = false }
shared = { version = "0.7.1", path = "crates/shared", default-features = false }
sec1 = { version = "0.3.0-pre.1", features = ["der"], default-features = false }
semver = { version = "1.0.0", default-features = false }
serde = { version = "1.0.136", features = ["derive"], default-features = false }
serde_json = { version = "1.0.79", features = ["std"], default-features = false }
serial_test = { version = "0.10.0", default-features = false }
sgx = { version = "0.6.0", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
shell-words = { version = "1.1.0", default-features = false }
spin = { version = "0.9.8", default-features = false, features = ["lock_api", "spin_mutex", "rwlock", "lazy"] }
static_assertions = { version = "1.1.0", default-features = false }
tempfile = { version = "3.5.0", default-features = false }
testaso = { version = "0.1.0", default-features = false }
toml = { version = "0.5.9", default-features = false }
tracing = { version = "0.1.36", features = ["attributes"], default-features = false }
tracing-flame = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt"], default-features = false }
ureq = { version = "2.4.0", default-features = false }
url = { version = "2.2.2", default-features = false }
vdso = { version = "0.2.2", default-features = false }
wat = { version = "1.0.0", default-features = false }
webpki-roots = { version = "0.22.2", default-features = false }
x509-cert = { version = "0.1.0", features = ["std"], default-features = false }
x86_64 = { version = "0.14.9", default-features = false }
xsave = { version = "2.0.2", default-features = false }
zeroize = { version = "1.5.4", features = ["alloc"], default-features = false }

# wasmtime and its pinned dependencies
# these will need to be updated together
wasmtime = { version = "5.0.1", features = ["cranelift", "pooling-allocator"], default-features = false }
cap-std = { version = "1.0.0", default-features = false }
io-lifetimes = { version = "1.0.0", default-features = false }
rustix = { version = "0.36.0", features = ["std"], default-features = false }
wasi-common = { version = "5.0.1", default-features = false }
wasmtime-wasi = { version = "5.0.1", features = ["sync"], default-features = false }
wiggle = { version = "5.0.1", default-features = false }

[[bin]]
name = "enarx-shim-kvm"
test = false
